--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-body {
-  background-image: url("./images/backg1.jpg");
-
-  background-size: cover;
-  background-repeat: no-repeat;
+.App {
   /* background-position: unset; */
 }
