--- a/src/Components/RidingDetails/RidingDetails.css
+++ b/src/Components/RidingDetails/RidingDetails.css
@@ -25,3 +25,14 @@
 .map-area {
   width: 65%;
 }
+.fare-details {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(253, 250, 250, 0.822);
+  margin: 10px 0;
+  padding: 20px 10px;
+  border-radius: 10px;
+}
+.fare-details img {
+  width: 20%;
+}
