--- a/src/Components/Rides/Rides.css
+++ b/src/Components/Rides/Rides.css
@@ -3,7 +3,7 @@
   width: 230px;
   height: 220px;
   padding: 10px;
-  background: rgb(240, 243, 243);
+  background: white;
   border-radius: 10px;
   box-shadow: 2px 2px 30px rgb(71, 71, 70);
 }
